--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,9 @@ matrix:
 #  - if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc; fi
 
 ## uncomment the following lines to override the default test script
-#script:
-#  - julia -e 'Pkg.clone(pwd()); Pkg.build("BioSequenceGraphs"); Pkg.test("BioSequenceGraphs"; coverage=true)'
+script:
+  - julia ci_prep.jl
+  - julia -e 'using Pkg; Pkg.build(); Pkg.test("BioSequenceGraphs", coverage = true)'
 after_success:
   # push coverage results to Coveralls
   - julia -e 'cd(Pkg.dir("BioSequenceGraphs")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
