--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ ReadDatastores = "70a005b8-9d8a-11e9-0d98-c909fa2e52d2"
 [compat]
 BioSequences = "2"
 FASTX = "1.1"
+KmerAnalysis = "0.3"
 ReadDatastores = "0.4"
 julia = "1"
 
